# SpamShield

./: .replit  app.py  ml_models.py  models.py  preprocessing.py  pyproject.toml  replit.nix  routes.py  utils.py
attached_assets/: Pasted--Web-LSTM-Residual-Attent-1743403704174.txt
instance/: spam_filter.db
saved_models/: sm_svm.pkl
static/css/: style.css
static/js/: charts.js  main.js
templates/: base.html  dataset.html  error.html  history.html  index.html  model.html  performance.html
uploads/: ge_sms_500.csv
